--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "scripts": {
     "build": "node ./util/build.js",
-    "lint": "tslint --project \"tsconfig.json\"",
     "start": "node -r module-alias/register ./dist",
     "start:dev": "nodemon --config nodemon.json",
     "test": "nodemon --config nodemon.test.json"
@@ -27,6 +26,9 @@
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.1.8",
     "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
+    "eslint": "^6.8.0",
     "find": "^0.3.0",
     "fs-extra": "^8.1.0",
     "jasmine": "^3.5.0",
@@ -35,7 +37,6 @@
     "supertest": "^4.0.2",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^5.20.1",
     "typescript": "^3.7.5"
   }
 }
