dont allow console logs on client

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -50,6 +50,7 @@
         "comma-dangle": ["error", {
             "arrays": "always-multiline",
             "objects": "always-multiline"
-        }]
+        }],
+        "no-console": "error"
     }
 }
