--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -38,13 +38,26 @@
         ],
         "max-len": [
             "error",
-            80,
+            120,
             2
         ],
         "no-multiple-empty-lines": "error",
         "comma-dangle": ["error", {
             "arrays": "always-multiline",
             "objects": "always-multiline"
-        }]
+        }],
+        "@typescript-eslint/explicit-function-return-type": ["error"],
+        "@typescript-eslint/explicit-member-accessibility": ["error"],
+        "@typescript-eslint/explicit-module-boundary-types": ["error"],
+        "@typescript-eslint/member-delimiter-style": ["error", {
+            "multiline": {
+              "delimiter": "semi",
+              "requireLast": true
+            },
+            "singleline": {
+              "delimiter": "semi",
+              "requireLast": true
+            }
+          }]
     }
 }
