--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -43,7 +43,7 @@
         ],
         "max-len": [
             "error",
-            80,
+            120,
             2
         ],
         "no-multiple-empty-lines": "error",
@@ -51,6 +51,19 @@
             "arrays": "always-multiline",
             "objects": "always-multiline"
         }],
-        "no-console": "error"
+        "no-console": "error",
+        "@typescript-eslint/explicit-function-return-type": ["error"],
+        "@typescript-eslint/explicit-member-accessibility": ["error"],
+        "@typescript-eslint/explicit-module-boundary-types": ["error"],
+        "@typescript-eslint/member-delimiter-style": ["error", {
+            "multiline": {
+              "delimiter": "semi",
+              "requireLast": true
+            },
+            "singleline": {
+              "delimiter": "semi",
+              "requireLast": true
+            }
+          }]
     }
 }
