--- a/api/package.json
+++ b/api/package.json
@@ -7,14 +7,10 @@
     "start:dev": "nodemon --config nodemon.json",
     "test": "nodemon --config nodemon.test.json"
   },
-  "_moduleAliases": {
-    "@server": "dist/Server"
-  },
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
-    "http-status-codes": "^1.4.0",
-    "module-alias": "^2.2.2"
+    "http-status-codes": "^1.4.0"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
