added no unused var rule

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -57,8 +57,8 @@
             "singleline": {
               "delimiter": "semi",
               "requireLast": true
-            },
-          }]
-
+            }
+          }],
+          "@typescript-eslint/no-unused-vars": "error"
     }
 }
