--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -64,6 +64,7 @@
               "delimiter": "semi",
               "requireLast": true
             }
-          }]
+          }],
+          "@typescript-eslint/no-unused-vars": "error"
     }
 }
