--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -27,7 +27,8 @@
     "rules": {
         "indent": [
             "error",
-            4
+            4,
+            {"SwitchCase": 1}
         ],
         "linebreak-style": [
             "error",
@@ -43,7 +44,7 @@
         ],
         "max-len": [
             "error",
-            120,
+            140,
             2
         ],
         "no-multiple-empty-lines": "error",
